--- a/MwStudyDemo/runtimepermissiondemo/src/main/res/values/strings.xml
+++ b/MwStudyDemo/runtimepermissiondemo/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RuntimePermissionDemo</string>
+    <string name="title_activity_second">SecondActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
