--- a/MwStudyDemo/interestingpolldemo/src/main/res/values/strings.xml
+++ b/MwStudyDemo/interestingpolldemo/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">InterestingPollDemo</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>x
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>x
 </resources>
