--- a/MwStudyDemo/android5xdemo/src/main/res/values/strings.xml
+++ b/MwStudyDemo/android5xdemo/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Android5XDemo</string>
     <string name="title_activity_basicctivity">Basicctivity</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
